# Elkeid

.github/workflows/: mayhem.yml
driver/LKM/src/: smith_hook.c  trace.c
mayhem/: Dockerfile  parse_event.mayhemfile
plugins/journal_watcher/fuzz/: Cargo.toml
plugins/journal_watcher/fuzz/fuzz_targets/: parse_event.rs
plugins/journal_watcher/src/: lib.rs
rasp/librasp/src/: manager.rs
rasp/plugin/src/: monitor.rs  report.rs
server/agent_center/grpctrans/grpc_handler/: transfer_handler.go
server/agent_center/grpctrans/pool/: pool.go
server/agent_center/httptrans/client/: heartbeat.go
