[package]
name = "journal_watcher-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pest = "2.3.1"

[dependencies.journal_watcher]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_event"
path = "fuzz_targets/parse_event.rs"
test = false
doc = false
